crates/sniff-test/tests/snapshots/fixtures__ambiguous_markers_strict.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_markers",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "ambiguous-markers",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 2,
    "counts": {
      "ambiguous-panic-markers": 1,
      "ambiguous-panic-requirements": 1,
      "analysis-incomplete": 0,
      "cached-dependency-panics": 0,
      "compiler-asserts": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "panic-invocations": 0,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "ambiguous-panic-requirements": 1,
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": null,
            "kind": "ambiguous-panic-requirement",
            "level": "deny",
            "reason": "`ambiguous_markers::duplicate_name_ratio` has 2 # Panics requirements named `nonzero`",
            "span": "src/lib.rs:21:1: 21:45",
            "target": "ambiguous_markers::duplicate_name_ratio",
            "trace": []
          }
        ],
        "has-panic-docs": false,
        "root": "ambiguous_markers::duplicate_name_marker",
        "root-declaration": "src/lib.rs:27:1",
        "root-kind": "concrete"
      },
      {
        "counts": {
          "ambiguous-panic-markers": 1,
          "analysis-incomplete": 0,
          "cached-dependency-panics": 0,
          "compiler-asserts": 0,
          "documented-panics": 0,
          "indirect-call-boundaries": 0,
          "panic-invocations": 0,
          "trusted-panics": 0
        },
        "findings": [
          {
            "edge": null,
            "kind": "ambiguous-panic-marker",
            "level": "deny",
            "reason": "one `// PANIC:` marker applies to 2 panic obligation sites",
            "span": "src/lib.rs:9:1: 10:1",
            "target": null,
            "trace": [
              "src/lib.rs:11:21: 11:42: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio",
              "src/lib.rs:12:22: 12:43: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "ambiguous_markers::shared_block_marker",
        "root-declaration": "src/lib.rs:8:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
