crates/sniff-test/tests/snapshots/fixtures__ambiguous_markers_warn.snap
---
source: crates/sniff-test/tests/fixtures.rs
assertion_line: 298
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_markers",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "ambiguous-markers",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 1,
    "counts": {
      "ambiguous-obligation-markers": 1,
      "analysis-incomplete": 0,
      "indirect-call-boundaries": 0,
      "panic-obligations": 0,
      "raw-panic-paths": 0,
      "trusted-panic-obligations": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 1,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [
      {
        "counts": {
          "ambiguous-obligation-markers": 1,
          "analysis-incomplete": 0,
          "indirect-call-boundaries": 0,
          "panic-obligations": 0,
          "raw-panic-paths": 0,
          "trusted-panic-obligations": 0
        },
        "findings": [
          {
            "edge": null,
            "kind": "ambiguous-obligation-marker",
            "level": "warn",
            "reason": "one `// PANIC:` marker applies to 2 panic obligation sites",
            "span": "src/lib.rs:9:1: 10:1",
            "target": null,
            "trace": [
              "src/lib.rs:11:21: 11:42: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio",
              "src/lib.rs:12:22: 12:43: ambiguous_markers::shared_block_marker --direct-call-> ambiguous_markers::ratio"
            ]
          }
        ],
        "has-panic-docs": false,
        "root": "ambiguous_markers::shared_block_marker",
        "root-declaration": "src/lib.rs:8:1",
        "root-kind": "concrete"
      }
    ],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
