crates/sniff-test/tests/snapshots/fixtures__ambiguous_safety_allow.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "analysis-findings": [],
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_safety",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "ambiguous-safety",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 3,
    "generic-roots": 0,
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
