crates/sniff-test/tests/snapshots/fixtures__ambiguous_safety_generic_instances.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: "report[\"findings\"]"
---
[
  {
    "effect": "safety",
    "finding": "ambiguous-marker",
    "function": "ambiguous_safety::read_copy",
    "kind": "effect",
    "level": "deny",
    "owner": {
      "crate": "ambiguous_safety",
      "scope": "workspace"
    },
    "reason": "one `// SAFETY:` marker applies to 2 safety effect groups",
    "root": "ambiguous_safety::reused_marker_across_generic_instances",
    "root-kind": "concrete",
    "root-span": "src/lib.rs:51:1: 51:48",
    "span": "src/lib.rs:47:1: 48:1",
    "trace": [
      "src/lib.rs:55:13: 55:29: ambiguous_safety::reused_marker_across_generic_instances --direct-call-> ambiguous_safety::read_copy",
      "src/lib.rs:48:14: 48:35: ambiguous_safety::read_copy --direct-call-> core::ptr::read"
    ],
    "trace-id": "cc848cc9"
  }
]
