crates/sniff-test/tests/snapshots/fixtures__ambiguous_safety_macro_instances.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "crate-name": "ambiguous_safety"
    },
    "findings": [],
    "format-version": 12,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "tool-version": "0.1.0"
  }
]
