crates/sniff-test/tests/snapshots/fixtures__ambiguous_safety_strict.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_safety"
    },
    "dependencies": [],
    "findings": [
      {
        "effect": "safety",
        "function": "ambiguous_safety::read_duplicate",
        "kind": "ambiguous-effect-requirement",
        "level": "deny",
        "reason": "`ambiguous_safety::read_duplicate` has multiple # Safety requirements named `valid ptr`",
        "requirements": [
          "valid_ptr: pointer must be non-null.",
          "valid_ptr: pointer must reference initialized memory."
        ],
        "root": "ambiguous_safety::duplicate_safety_marker",
        "root-kind": "concrete",
        "span": "src/lib.rs:7:1: 7:43"
      },
      {
        "effect": "safety",
        "function": "ambiguous_safety::read_duplicate",
        "kind": "ambiguous-effect-requirement",
        "level": "deny",
        "reason": "`ambiguous_safety::read_duplicate` has multiple # Safety requirements named `valid ptr`",
        "requirements": [
          "valid_ptr: pointer must be non-null.",
          "valid_ptr: pointer must reference initialized memory."
        ],
        "root": "ambiguous_safety::read_duplicate",
        "root-kind": "concrete",
        "span": "src/lib.rs:7:1: 7:43"
      },
      {
        "effect": "safety",
        "function": "ambiguous_safety::reused_macro_marker",
        "kind": "ambiguous-effect-marker",
        "level": "deny",
        "reason": "one `// SAFETY:` marker applies to 2 safety effect groups",
        "root": "ambiguous_safety::reused_macro_marker",
        "root-kind": "concrete",
        "span": "src/lib.rs:27:1: 28:1"
      }
    ],
    "format-version": 7,
    "reason": "sniff-test-artifact",
    "rustc-version": "[RUSTC_VERSION]",
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
