crates/sniff-test/tests/snapshots/fixtures__ambiguous_safety_warn.snap
---
source: crates/sniff-test/tests/fixtures.rs
expression: messages
---
[
  {
    "artifact": {
      "artifact-id": "[ARTIFACT_ID]",
      "crate-name": "ambiguous_safety",
      "crate-types": [
        "lib"
      ],
      "extra-filename": "[EXTRA_FILENAME]",
      "manifest-path": "[FIXTURE]/Cargo.toml",
      "metadata": "[METADATA]",
      "package-name": "ambiguous-safety",
      "package-version": "0.1.0",
      "target": null
    },
    "concrete-roots": 0,
    "counts": {
      "analysis-incomplete": 0,
      "documented-panics": 0,
      "indirect-call-boundaries": 0,
      "raw-panic-paths": 0,
      "trusted-panics": 0
    },
    "dependencies": [],
    "dependency-cache": {
      "failed": 0,
      "hits": 0,
      "total": 0
    },
    "format-version": 2,
    "generic-roots": 0,
    "missing-roots": [],
    "reason": "sniff-test-artifact",
    "roots": [],
    "rustc-version": "[RUSTC_VERSION]",
    "safety": {
      "counts": {
        "ambiguous-obligation-names": 1,
        "missing-docs": 0,
        "missing-justification": 0,
        "missing-requirements": 0
      },
      "findings": [
        {
          "function": "ambiguous_safety::read_duplicate",
          "kind": "ambiguous-obligation-name",
          "level": "warn",
          "reason": "`ambiguous_safety::read_duplicate` has multiple # Safety requirements named `valid ptr`",
          "requirements": [
            "valid_ptr: pointer must be non-null.",
            "valid_ptr: pointer must reference initialized memory."
          ],
          "span": "src/lib.rs:7:1: 7:43",
          "target": null
        }
      ]
    },
    "scope": "workspace",
    "tool-version": "0.1.0"
  }
]
